debug: changed the procfile

--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,9 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.1.5",
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "17.x",
+    "npm": "8.3.0"
   }
 }
