deploy: minor fixes to deploy app

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "budget_it",
-  "proxy": "http://localhost:8000/",
+  "proxy": " https://budget-it-server.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
